# AJBLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: linux-unittests.yaml
src/: CMakeLists.txt
test/: CMakeLists.txt
test/tests/: sanityTest.cpp
